create methods for author
